<resources>
    <string name="app_name">AppBanHang</string>
    <string name="m_t_chi_ti_t_s_n_ph_m">Mô tả chi tiết sản phẩm</string>
    <string name="th_m_v_o_gi_h_ng">Thêm vào giỏ hàng</string>
    <string name="gi_25000">Giá: 25000</string>
    <string name="t_n_s_n_ph_m">Tên sản phẩm</string>
    <string name="String">Chi tiết sản phẩm</string>
    <string name="title_activity_thong_tin">ThongTinActivity</string>
</resources>