<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.appbanhangadmin.activity.ChiTietAdminActivity">
<androidx.appcompat.widget.Toolbar
    android:layout_width="match_parent"
    app:title="@string/String"
    android:background="#EACB7A"
    android:layout_height="?attr/actionBarSize"
    app:layout_constraintTop_toTopOf="parent"
    android:id="@+id/toolbarchitietsanpham">
</androidx.appcompat.widget.Toolbar>


<LinearLayout
    android:id="@+id/layout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@+id/toolbarchitietsanpham">

    <ImageView
        android:id="@+id/imgchitietsanpham"
        android:layout_width="match_parent"
        android:layout_height="219dp"
        android:src="@drawable/iconnew" />

    <TextView
        android:id="@+id/txttensannpham"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t_n_s_n_ph_m"
        android:textSize="15dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txtloaisp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "Loại: "
        android:textSize="15dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtgiasanpham"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/gi_25000"
        android:textColor="@android:color/holo_red_light"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>

    <LinearLayout
        android:id="@+id/layoutmotachitiet"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/layout1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-6dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:text="@string/m_t_chi_ti_t_s_n_ph_m"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtmotachitiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/m_t_chi_ti_t_s_n_ph_m"
                android:textSize="15sp" />
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutmotachitiet"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp">

        <Button
            android:id="@+id/btnsuasanpham"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#56A637"
            android:text="Sửa sản phẩm"
            android:textColor="@android:color/white"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btnhuychitietxoasanpham"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginLeft="18dp"
            android:backgroundTint="#56A637"
            android:text="Xóa"
            android:textColor="@android:color/white"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>