<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.appbanhangadmin.activity.ChiTietActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        app:title="@string/String"
        android:background="#EACB7A"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbarchitietsanpham">
        <FrameLayout
            android:id="@+id/framegiohangchitiet"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:layout_width="60dp"
            android:layout_height="?attr/actionBarSize">
            <com.nex3z.notificationbadge.NotificationBadge
                android:id="@+id/menu_soluong"
                android:layout_gravity="top|right"
                android:layout_width="25dp"
                android:layout_height="25dp"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_baseline_shopping_cart_24"/>
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbarchitietsanpham">

        <ImageView
            android:id="@+id/imgchitietsanpham"
            android:layout_width="match_parent"
            android:layout_height="219dp"
            android:src="@drawable/iconnew" />

        <TextView
            android:id="@+id/txttensannpham"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_n_s_n_ph_m"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtgiasanpham"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:text="@string/gi_25000"
            android:textColor="@android:color/holo_red_light"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutmotachitiet"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/layout1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-6dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:text="@string/m_t_chi_ti_t_s_n_ph_m"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtmotachitiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/m_t_chi_ti_t_s_n_ph_m"
                android:textSize="15sp" />
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutmotachitiet">

        <!--        <Spinner-->
        <!--            android:id="@+id/spinner"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="26dp"-->
        <!--            android:layout_marginStart="20dp"-->
        <!--            android:layout_marginTop="2dp"-->
        <!--            android:layout_marginEnd="20dp"-->
        <!--            android:background="@drawable/spinner"-->
        <!--            android:contentDescription="@string/String" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btnthemvaogiohang"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#56A637"
                android:text="@string/th_m_v_o_gi_h_ng"
                android:textColor="@android:color/white"
                android:textSize="12dp" />

            <Button
                android:id="@+id/btnmuangaychitiet"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="#56A637"
                android:text="Mua ngay"
                android:textColor="@android:color/white"
                android:textSize="12dp" />
        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>